objects/SQT_NSA__c.object
<CustomObject>
    <description>SQT NSA Related information for a Deal State. BDC Communication Project</description>
    <fields>
        <fullName>Account_Region__c</fullName>
        <formula>Deal_State__r.Account_Region__c</formula>
        <label>Account Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Deal_State__r.Account__c</formula>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brief_Description_of_Addendum__c</fullName>
        <label>Brief Description of Addendum</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Co_Term__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Co-Term</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Consult__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consult</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consultant_Name__c</fullName>
        <label>Consultant Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Controller_Email__c</fullName>
        <label>Controller Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Controller_NSA_Review_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Controller NSA Review Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Controller_Name__c</fullName>
        <label>Controller Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Controller_Review_Date_Time__c</fullName>
        <label>Controller Review Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Credit_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deal_State_Link__c</fullName>
        <formula>hyperlink(&quot;https://adpdealerservices--training.cs24.my.salesforce.com/&quot;&amp; Deal_State__c, &quot;Deal State Link&quot;,&quot;_blank&quot;)</formula>
        <label>Deal State Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal State</label>
        <referenceTo>Deal_State__c</referenceTo>
        <relationshipLabel>SQT NSA</relationshipLabel>
        <relationshipName>SQT_NSA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flat_Rate_Tapes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flat Rate Tapes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Free_Months__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Free Months</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Future_Discounts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Future Discounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Laser_Clicks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Laser Clicks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Laser_F_I_Forms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Laser F&amp;I Forms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NSA_ATTRIBUTES__c</fullName>
        <label>NSA Attributes</label>
        <picklist>
            <picklistValues>
                <fullName>3PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authorized Signer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COA/ARM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Check/ACE (Autocheck Express)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM/Lot Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Touch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Access (Dealer Access)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Archiving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Programming Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Contracting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F&amp;I Forms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>File Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Statements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat Mthly Rate Tape/Elect Updates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat Rate Tapes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future Discounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hole in Firewall &amp; Get Wired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intravision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPNS/Call Connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP Telephony</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laser Clicks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laser Pricing</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>NSA_Attached_By__c</fullName>
        <label>NSA Attached By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSA_Attached_Date__c</fullName>
        <label>NSA Attached Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NSA_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NSA Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NSA_File_Name__c</fullName>
        <label>NSA File Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NSA_Type__c</fullName>
        <label>NSA Type</label>
        <picklist>
            <picklistValues>
                <fullName>IPNS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS/NewCo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Quotes__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Quotes</label>
        <referenceTo>Opportunity_Quotes__c</referenceTo>
        <relationshipLabel>SQT NSA</relationshipLabel>
        <relationshipName>SQT_NSA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Price_Protection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Price Protection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Promo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roll_Call_Date__c</fullName>
        <label>Roll Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SQT_Deal_Link__c</fullName>
        <formula>hyperlink(&quot;http://&quot; &amp; $Setup.CustomSettings__c.SQTServer__c &amp; &quot;Home.aspx?DealID=&quot; &amp; Deal_State__r.SQT_Deal_ID__c &amp; &quot;&amp;UID=&quot; &amp; $User.Id, Deal_State__r.SQT_Deal_ID__c,&quot;_blank&quot;)</formula>
        <inlineHelpText>Click here to access a copy of the NSA attached to the deal in SQT.</inlineHelpText>
        <label>SQT Deal Link</label>
        <type>Text</type>
    </fields>
    <label>SQT NSA</label>
    <nameField>
        <displayFormat>NSA-{00000}</displayFormat>
        <label>SQT NSA ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SQT NSA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>